# Eccomerce

./: .gitignore
e-commerce/backend/: .dockerignore  .env  Dockerfile  EXCEL_IMPORT_COMMANDS.md  README.md  README_SEED.md  RENDER_DEPLOYMENT_FIXES.md  RENDER_SEED_DATA.md  celery_worker.py  pyproject.toml  pytest.ini  requirements.txt  run_excel_import.ps1  run_migrations.ps1  run_seed.ps1  setup_and_seed.ps1  start_server.ps1
e-commerce/backend/alembic/: env.py
e-commerce/backend/alembic/versions/: 001_initial_schema.py  002_add_users.py  003_add_audit_logs.py  004_add_master_data_tables.py  005_add_discounts_table.py  006_add_payment_transactions_table.py  007_add_jewelry_product_fields.py  008_add_additional_jewelry_fields.py  009_add_pricing_calculation_fields.py  010_add_product_ids_to_discounts.py  011_add_return_requests_table.py  012_add_return_request_customer_fk.py  013_change_product_description_to_text.py  014_change_product_image_url_to_text.py  4bc8e1b4789e_add_image_url_to_products.py
e-commerce/backend/app/: celery_app.py  main.py
e-commerce/backend/app/core/: auth.py  cache.py  config.py  events.py  security.py  tenant.py
e-commerce/backend/app/db/: base.py  session.py  utils.py
e-commerce/backend/app/schemas/: audit.py  auth.py  category.py  checkout.py  discount.py  order.py  payment.py  payment_method.py  product.py  (+6 more)
e-commerce/backend/scripts/: create_admin.py  import_excel_products.py  seed_data.py
e-commerce/backend/tests/: conftest.py  test_auth_api.py  test_health.py  test_orders_api.py  test_products_api.py  test_services.py
(+205 files in other folders)
